2020-04-26  b606  <7627533+b606@users.noreply.github.com>

	* StatsLogger.cs: Fix Graphviz nodes with templates <...> in
	the method name. 

2020-04-25  b606  <7627533+b606@users.noreply.github.com>

	* LanguageWorker_French_Debug.cs: All Loggers are private
	static members with public static debugging functions.

2020-04-24  b606  <7627533+b606@users.noreply.github.com>

	* LanguageWorker_French_Debug.cs: Reduce log messages by
	memorizing the already debugged call stacks.

2020-04-23  b606  <7627533+b606@users.noreply.github.com>

	* LanguageWorker_French.cs:
	* LanguageWorker_French_Debug.cs: changed ArtNames to be
	processed as normal titles.

2020-04-21  b606  <7627533+b606@users.noreply.github.com>

	* LanguageWorker_French.cs: Moved debugging stuff to
	LanguageWorker_French_Debug.cs, cleaning up the main file.

	* LanguageWorker_French_Debug.cs: This new file contains all
	the debugging methods.

	* RimWorld_LanguageWorker_French.csproj: Updated the project

2020-04-21  b606  <7627533+b606@users.noreply.github.com>

	* LanguageWorker_French.cs: Renamed ToTitleCasePawnName to
	ToTitleCaseProperName, and added two other categories:
	ToTitleCaseOtherName (for trader ships and faction names),
	ToTitleCaseOther (for generic titles: quest scripts titles
	mostly).
	The different types of names and titles are hacked from the
	callstack and logged in debug mode for verification. List of
	semantic contexts : QuestName, PawnName, SettlementName,
	WorldFeatureName, FactionName, ArtName, OtherName, OtherTitle.

	* StatsLogger.cs: class CallerStats now records the
	method.DeclaringType. The Hashkey uses the user-defined string
	and the method name.

2020-04-18  b606  <7627533+b606@users.noreply.github.com>

	* LanguageWorker_French.cs: Fix: Last name in NameTriple was
	not capitalized if from tribal words. Added ToTitleCase() for
	pawn names.
	NB: There are different semantic contexts for ToTitleCase().
	A temporary solution using System.Reflection is used to detect