@@ -1,4 +1,4 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="15.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props')" />
   <PropertyGroup>
@@ -58,6 +58,8 @@
     <Compile Include="Logger.cs" />
     <Compile Include="StringExtension.cs" />
     <Compile Include="LanguageWorker_French_Debug.cs" />
+    <Compile Include="Patcher.cs" />
+    <Compile Include="RulesForPawnPatch.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
