@@ -5,6 +5,15 @@
 
 2020-04-25  b606  <7627533+b606@users.noreply.github.com>
 
+	* Patcher.cs:
+	* RulesForPawnPatch.cs:
+	* LanguageWorker_French.cs:
+	* RimWorld_LanguageWorker_French.csproj: Added a patch to fix
+	the kind label and gender in the rules generated by
+	GrammarUtility.RulesForPawn.
+
+2020-04-25  b606  <7627533+b606@users.noreply.github.com>
+
 	* LanguageWorker_French_Debug.cs: All Loggers are private
 	static members with public static debugging functions.
 
